added initial html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GridBiz</title>
+    <script src="https://kit.fontawesome.com/22e970fb9f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Web Demo</title>
 </head>
 <body>
+    <div class="wrapper">
+        <nav class="main-nav">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <section class="top-container">
+            <header class="showcase">
+                <h1>Travel to Japan</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab animi sint nostrum, quod ducimus aperiam.</p>
+                <a href="#" class="btn">Read More</a>
+            </header>
+        </section>
+        <section class="info">
+            <img src="tokyo1.jpg" alt="Image of Tokyo">
+            <div>
+                <h2>Tokyo</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quasi eius incidunt illum repudiandae perferendis quam consectetur deleniti nesciunt magnam.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+            <img src="kyoto1.jpg" alt="Image of Kyoto">
+            <div>
+                <h2>Kyoto</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quasi eius incidunt illum repudiandae perferendis quam consectetur deleniti nesciunt magnam.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+            <img src="osaka1.jpg" alt="Image of Osaka">
+            <div>
+                <h2>Osaka</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quasi eius incidunt illum repudiandae perferendis quam consectetur deleniti nesciunt magnam.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+        </section>
+        <section class="gallery">
+            <h2>Gallery</h2>
+            <img src="https://source.unsplash.com/random/200x200" alt="">
+            <img src="https://source.unsplash.com/random/201x200" alt="">
+            <img src="https://source.unsplash.com/random/202x200" alt="">
+            <img src="https://source.unsplash.com/random/203x200" alt="">
+            <img src="https://source.unsplash.com/random/204x200" alt="">
+            <img src="https://source.unsplash.com/random/205x200" alt="">
+            <img src="https://source.unsplash.com/random/206x200" alt="">
+            <img src="https://source.unsplash.com/random/207x200" alt="">
+            <img src="https://source.unsplash.com/random/208x200" alt="">
+            <img src="https://source.unsplash.com/random/209x200" alt="">
+        </section>
+        <footer>
+            <p>Demo Website &copy; 2021</p>
+        </footer>
+    </div>
     
 </body>
 </html>
