added css elements to the webpage. added some grids to display the main cities in Japan. fixed up the nav bar along with the gallery and a footer

--- a/index.html
+++ b/index.html
@@ -18,35 +18,33 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <section class="top-container">
             <header class="showcase">
                 <h1>Travel to Japan</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab animi sint nostrum, quod ducimus aperiam.</p>
                 <a href="#" class="btn">Read More</a>
             </header>
-        </section>
         <section class="info">
             <img src="tokyo1.jpg" alt="Image of Tokyo">
             <div>
                 <h2>Tokyo</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quasi eius incidunt illum repudiandae perferendis quam consectetur deleniti nesciunt magnam.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate, minus vero eaque ex dolorum aut vitae sed praesentium velit! Tempora excepturi voluptatum mollitia magni facere eius omnis praesentium voluptas asperiores labore nemo alias est a adipisci iste, veritatis quod recusandae at dolor vitae veniam cum?</p>
                 <a href="#" class="btn">Learn More</a>
             </div>
             <img src="kyoto1.jpg" alt="Image of Kyoto">
             <div>
                 <h2>Kyoto</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quasi eius incidunt illum repudiandae perferendis quam consectetur deleniti nesciunt magnam.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro perferendis, alias assumenda eum atque facilis rerum est ipsam aperiam dolore distinctio sint. Laudantium quia officia quisquam in, hic, consequatur consequuntur, eos voluptatem nobis quidem maiores enim laboriosam dolores repellendus sed omnis nam vitae dignissimos iusto.</p>
                 <a href="#" class="btn">Learn More</a>
             </div>
-            <img src="osaka1.jpg" alt="Image of Osaka">
+            <img src="osaka1.jpg" alt="Image of Osaka" width="900px">
             <div>
                 <h2>Osaka</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quasi eius incidunt illum repudiandae perferendis quam consectetur deleniti nesciunt magnam.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere animi fuga vel dolores architecto placeat illum, dolorem ipsa earum repellat corrupti atque excepturi fugit ab illo suscipit saepe, dolorum numquam, distinctio accusamus! Odit placeat explicabo obcaecati velit error, veniam est distinctio quod minus ipsa recusandae.</p>
                 <a href="#" class="btn">Learn More</a>
             </div>
         </section>
+        <div class="gallery-heading"><h2>Gallery</h2></div>
         <section class="gallery">
-            <h2>Gallery</h2>
             <img src="https://source.unsplash.com/random/200x200" alt="">
             <img src="https://source.unsplash.com/random/201x200" alt="">
             <img src="https://source.unsplash.com/random/202x200" alt="">
@@ -57,6 +55,8 @@
             <img src="https://source.unsplash.com/random/207x200" alt="">
             <img src="https://source.unsplash.com/random/208x200" alt="">
             <img src="https://source.unsplash.com/random/209x200" alt="">
+            <img src="https://source.unsplash.com/random/210x200" alt="">
+            <img src="https://source.unsplash.com/random/211x200" alt="">
         </section>
         <footer>
             <p>Demo Website &copy; 2021</p>
