for contact page, added background img and the initial contact box with some initial styling

--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
 </head>
 <body>
     <div class="wrapper">
-        <nav class="main-nav">
+        <header>
+            <nav class="main-nav">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html" target="_blank">Home</a></li>
+                <li><a href="about.html" target="_blank">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html" target="_blank">Contact</a></li>
             </ul>
-        </nav>
-            <header class="showcase">
+            </nav>
+        </header>
+            <div class="showcase">
                 <h1>Travel to Japan</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab animi sint nostrum, quod ducimus aperiam.</p>
                 <a href="#" class="btn">Read More</a>
-            </header>
+            </div>
         <section class="info">
             <img src="tokyo1.jpg" alt="Image of Tokyo">
             <div>
