added styles to contact page

--- a/contact.html
+++ b/contact.html
@@ -22,23 +22,26 @@
             <form>
                 <div class="input-group">
                     <input type="text" id="name" required>
-                <label for="name">Your Name</label>
+                <label for="name"><i class="far fa-user-circle"></i> Your Name</label>
                 </div>
                 <div class="input-group">
                     <input type="text" id="number" required>
-                <label for="number">Phone Number</label>
+                <label for="number"><i class="fas fa-mobile-alt"></i> Phone Number</label>
                 </div>
                 <div class="input-group">
                     <input type="text" id="email" required>
-                <label for="email">E-mail</label>
+                <label for="email"><i class="fas fa-at"></i> E-mail</label>
                 </div>
                 <div class="input-group">
-                    <textarea id="message" rows="8"></textarea>
-                <label for="message">Write A Message</label>
+                    <textarea id="message" rows="8" required></textarea>
+                <label for="message"><i class="fas fa-comments"></i> Write A Message</label>
                 </div>
-                <button type="submit">Submit</button>
-            </form>>
+                <button type="submit">SUBMIT <i class="fas fa-paper-plane"></i></button>
+            </form>
         </div>
+        <footer>
+            <p>Demo Website &copy; 2021</p>
+        </footer>
     </div>
 </body>
 </html>
